--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
+    <script src="actor.js"></script>
+    <script src="mens.js"></script>
+    <script src="kat.js"></script>
+    <script src="dokter.js"></script>
     <script id="canvas" src="script.js"></script>
+   
   </body>
 </html>
 
