--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="mens.js"></script>
     <script src="kat.js"></script>
     <script src="dokter.js"></script>
+    <script src="wappie.js"></script>
     <script id="canvas" src="script.js"></script>
    
   </body>
